// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page renders correctly with all parameters 1`] = `
<Page
  className="test"
  id="test"
  location={
    Object {
      "pathname": "test",
    }
  }
  title="test"
  useBaseClass={false}
>
  <main
    className="main"
  >
    <div
      className="page page-test"
    >
      test
    </div>
    <audio
      className="spacer"
      controls={true}
    />
  </main>
</Page>
`;

exports[`Page renders correctly with id only 1`] = `
<Page
  id="test"
>
  <main
    className="main"
  >
    <div
      className="page page-base page-test"
    />
    <audio
      className="spacer"
      controls={true}
    />
  </main>
</Page>
`;
